Added Portfolio details with images, styling, notes on future changes that need to be made, etc.

--- a/style.css
+++ b/style.css
@@ -23,3 +23,14 @@
     width: auto;
 }
 
+.Latsch {
+    margin: 5%;
+    height: 300px;
+    width:auto;
+}
+
+.SkunkMap {
+    margin: 5%;
+    height: 400px;
+    width: auto;
+}
